FP-70 Objects edit fix. Temporal values replaced with sorted sets (sorted by begin date). Many hashCode() implementations removed as there is a conflict with collections loading.